force-app/src/objects/EventApi__Section__c.object
<CustomObject>
    <description>Section for the related event.</description>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Rich Text used for providing a unique description for the related section.</description>
        <inlineHelpText>Rich Text used for providing a unique description for the related section.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Order__c</fullName>
        <description>**Required** The display order for sections.</description>
        <inlineHelpText>**Required** The display order for sections.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>**Required** Linked to the related event.</description>
        <inlineHelpText>**Required** Linked to the related event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Image__c</fullName>
        <description>The image used when viewing the related section in an event&apos;s registration. The provided image will also be cropped to fit a 200x200 pixel thumbnail.</description>
        <inlineHelpText>The image used when viewing the related section in an event&apos;s registration. The provided image will also be cropped to fit a 200x200 pixel thumbnail.</inlineHelpText>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>